32-canary-deployments/hello-whale-green-svc.yml
apiVersion: v1
kind: Service 
metadata:
  name: hello-whale-green-svc
  labels:
    app: hello-whale-app
    version: green
spec:
  selector:
    app: hello-whale-app
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
