32-canary-deployments/hello-whale-svc.yml
apiVersion: v1
kind: Service 
metadata:
  name: hello-whale-svc
  labels:
    app: hello-whale-app
spec:
  selector:
    app: hello-whale-app
    version: blue
  type: LoadBalancer
  ports:
  - nodePort: 31113
    port: 80
    targetPort: 80
